Fixed layout of object card when object identifier and class are too long

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -237,7 +237,9 @@ th, td {
 }
 
 .slide svg {
-
+    max-width: 100%;
+    height: 100%;
+    display: block;
 }
 
 .arrow {
